--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+
     <title>Girl Geek Tees, LLC</title>
     <meta name="description" content="Outfitting nerdy lady-types since 2017. Buy geeky women's t-shirts, tank tops, and long-sleeved tees from our online store.">
     <link href="/favicon.ico?version=2" rel="shortcut icon">
+
+    <meta name="geo.region" content="US-MI">
+    <meta name="geo.placename" content="Lansing">
+    <meta name="geo.position" content="42.6959226;-84.5512009">
+
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
