add twitter info

--- a/index.html
+++ b/index.html
@@ -2,19 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
+    <!-- General Site Info -->
     <title>Girl Geek Tees, LLC</title>
     <meta name="description" content="Outfitting nerdy lady-types since 2017. Buy geeky women's t-shirts, tank tops, and long-sleeved tees from our online store.">
     <link href="/favicon.ico?version=2" rel="shortcut icon">
-
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@katiemaefritz" />
+    <meta name="twitter:title" content="Geek Girl Tees, LLC" />
+    <meta name="twitter:description" content="Outfitting nerdy lady-types since 2017." />
+    <meta name="twitter:image" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/images/geek-girl-tees-logo.png" />
+    <!-- Geo Information -->
     <meta name="geo.region" content="US-MI">
     <meta name="geo.placename" content="Lansing">
     <meta name="geo.position" content="42.6959226;-84.5512009">
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   </head>
+
   <body>
     <div class="container">
+
       <header>
         <nav class="navbar navbar-default">
           <div class="container-fluid">
@@ -38,6 +46,7 @@
           </div><!-- /.container-fluid -->
         </nav>
       </header>
+
       <main>
 
         <div class="jumbotron">
