add Facebook card support

--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>Girl Geek Tees, LLC</title>
     <meta name="description" content="Outfitting nerdy lady-types since 2017. Buy geeky women's t-shirts, tank tops, and long-sleeved tees from our online store.">
     <link href="/favicon.ico?version=2" rel="shortcut icon">
+    <!-- Facebook -->
+    <meta property="og:title" content="Geek Girl Tees, LLC">
+    <meta property="og:type" content="website">
+    <meta name="og:description" content="Outfitting nerdy lady-types since 2017. Buy geeky women's t-shirts, tank tops, and long-sleeved tees from our online store.">
+    <meta property="og:url" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK">
+    <meta property="og:image" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/images/geek-girl-tees-logo.png">
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@katiemaefritz" />
-    <meta name="twitter:title" content="Geek Girl Tees, LLC" />
-    <meta name="twitter:description" content="Outfitting nerdy lady-types since 2017." />
-    <meta name="twitter:image" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/images/geek-girl-tees-logo.png" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@katiemaefritz">
+    <meta name="twitter:title" content="Geek Girl Tees, LLC">
+    <meta name="twitter:description" content="Outfitting nerdy lady-types since 2017. Buy geeky women's t-shirts, tank tops, and long-sleeved tees from our online store.">
+    <meta name="twitter:image" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/images/geek-girl-tees-logo.png">
     <!-- Geo Information -->
     <meta name="geo.region" content="US-MI">
     <meta name="geo.placename" content="Lansing">
