add featured product page

--- a/featured/index.html
+++ b/featured/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <!-- General Site Info -->
-    <title>Portal Tank | Girl Geek Tees, LLC</title>
+    <title>Portal Layer Tank | Girl Geek Tees, LLC</title>
     <meta name="description" content="Portal-themed women's tank top with Aperture logo. From Geek Girl Tees, LLC: outfitting nerdy lady-types since 2017.">
     <link href="/favicon.ico?version=2" rel="shortcut icon">
     <!-- Facebook -->
-    <meta property="og:title" content="Portal Tank: Geek Girl Tees, LLC">
+    <meta property="og:title" content="Portal Layer Tank: Geek Girl Tees, LLC">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Portal-themed women's tank top with Aperture logo. From Geek Girl Tees, LLC: outfitting nerdy lady-types since 2017.">
-    <meta property="og:url" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/">
-    <meta property="og:image" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/images/geek-girl-tees-logo-fb.png">
+    <meta property="og:url" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/">
+    <meta property="og:image" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/images/geek-girl-tees-logo-fb.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@katiemaefritz">
-    <meta name="twitter:title" content="Portal Tank: Geek Girl Tees, LLC">
+    <meta name="twitter:title" content="Portal Layer Tank: Geek Girl Tees, LLC">
     <meta name="twitter:description" content="Portal-themed women's tank top with Aperture logo. From Geek Girl Tees, LLC: outfitting nerdy lady-types since 2017.">
-    <meta name="twitter:image" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/images/geek-girl-tees-logo.png">
+    <meta name="twitter:image" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/images/geek-girl-tees-logo.png">
     <!-- Geo Information -->
     <meta name="geo.region" content="US-MI">
     <meta name="geo.placename" content="Lansing">
@@ -45,8 +45,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">All Tees <span class="sr-only">(current)</span></a></li>
-                <li><a href="/sales">Sales</a></li>
+                <li><a href="/">All Tees</a></li>
+                <li class="active"><a href="/featured">Featured</a><span class="sr-only">(current)</span></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -55,52 +55,45 @@
 
       <main>
 
-        <div class="jumbotron">
-          <h1>Girl Geek Tees, LLC</h1>
-          <p>Outfitting nerdy lady-types since 2017</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-        </div>
+        <article>
+          <header class="row">
+            <div class="col-xs-12">
+              <h1>Portal Layer Tank</h1>
+            </div>
+          </header>
 
-        <div class="row">
-          <div class="col-xs-12">
-            <h2>Current Best-Sellers</h2>
-          </div>
-        </div>
-
-        <div class="row">
-
-          <article class="col-sm-4">
-            <figure>
+          <div class="row">
+            <figure class="col-sm-4">
               <img class="thumbnail img-responsive"
-                src="images\jkir_portal_layer_tank_dd.jpg"
+                src="\images\jkir_portal_layer_tank_dd.jpg"
                 alt="Portal layer tank">
-              <figcaption><a href="#"><h3>Portal layer tank</h3></a></figcaption>
             </figure>
-          </article>
-
-          <article class="col-sm-4">
-            <figure>
-              <img class="thumbnail img-responsive"
-                src="images\ivko_pusheen_dino_raglan_tee_dd.jpg"
-                alt="Pusheen dino raglan tee">
-              <figcaption><a href="#"><h3>Pusheen Dino Raglan Tee</h3></a></figcaption>
-            </figure>
-          </article>
-
-          <article class="col-sm-4">
-            <figure>
-              <img class="thumbnail img-responsive"
-                src="images\6e7e_pi_by_numbers_navy_fb.jpg"
-                alt="Pi made with numbers t-shirt">
-              <figcaption><a href="#"><h3>Pi T-Shirt</h3></a></figcaption>
-            </figure>
-          </article>
-
-        </div><!--/.row -->
+            <section class="col-sm-6">
+              <h2>DRESSED FOR SCIENCING</h2>
+              <p>To aid in the advancement of important scientific research, Aperture Science needs testers. And testers need proper clothing. At least, that's what it says in this file about human needs. We wouldn't really know. Oh, there's an entire section here about food, water, and not being hit by deadly lasers. Well, that would have been good to know before the tests were created. Oh well. We should still use these tests as a control study. For science.</p>
+              <p>Double-layered 96% cotton / 4% spandex tank (blue on the bottom, white crop tank on the top) just like Chell's infamous top from the Portal series - Aperture Laboratories logo and all. Perfect for completing your Chell cosplay, or any testing you may encounter. Machine wash cold, inside out, gentle cycle. Tumble dry low. Imported.</p>
+              <footer><hr class="text-muted"><p class="text-muted">This tank top, its photo, and the description above all come from Think Geek. You can buy the shirt <a href="http://www.thinkgeek.com/product/jkir/">on their website.</a></p></footer>
+            </section>
+            <form class="col-sm-2">
+              <div class="form-group">
+                <label for="choose-size">Choose a size</label>
+                <select class="form-control" id="choose-size">
+                  <option>Extra Small</option>
+                  <option>Small</option>
+                  <option>Medium</option>
+                  <option>Large</option>
+                  <option>Extra Large</option>
+                </select>
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+          </div>
+        </article>
       </main>
 
       <footer>
         <div class="row">
+          <hr>
           <div class="col-sm-8 col-sm-offset-2 text-center">
             <p class="text-muted">This is an educational project for <a href="https://msu.lansing.codes">MI 449 at Michigan State University.</a></p>
           </div>
