--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta property="og:title" content="Geek Girl Tees, LLC">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Outfitting nerdy lady-types since 2017. Buy geeky women's t-shirts, tank tops, and long-sleeved tees from our online store.">
-    <meta property="og:url" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/">
-    <meta property="og:image" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/images/geek-girl-tees-logo-fb.png">
+    <meta property="og:url" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/">
+    <meta property="og:image" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/images/geek-girl-tees-logo-fb.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@katiemaefritz">
     <meta name="twitter:title" content="Geek Girl Tees, LLC">
     <meta name="twitter:description" content="Outfitting nerdy lady-types since 2017. Buy geeky women's t-shirts, tank tops, and long-sleeved tees from our online store.">
-    <meta name="twitter:image" content="https://katiemfritz.github.io/MI-000-SS00-000-html-meta-elements-_f2DoK/images/geek-girl-tees-logo.png">
+    <meta name="twitter:image" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/images/geek-girl-tees-logo.png">
     <!-- Geo Information -->
     <meta name="geo.region" content="US-MI">
     <meta name="geo.placename" content="Lansing">
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">All Tees <span class="sr-only">(current)</span></a></li>
-                <li><a href="/sales">Sales</a></li>
+                <li><a href="/featured">Featured Tee</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -58,7 +58,7 @@
         <div class="jumbotron">
           <h1>Girl Geek Tees, LLC</h1>
           <p>Outfitting nerdy lady-types since 2017</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+          <p><a class="btn btn-primary btn-lg" href="/featured" role="button">Featured Tee</a></p>
         </div>
 
         <div class="row">
