updates to facebook and twitter sharing for featured page

--- a/featured/index.html
+++ b/featured/index.html
@@ -10,14 +10,14 @@
     <meta property="og:title" content="Portal Layer Tank: Geek Girl Tees, LLC">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Portal-themed women's tank top with Aperture logo. From Geek Girl Tees, LLC: outfitting nerdy lady-types since 2017.">
-    <meta property="og:url" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/">
-    <meta property="og:image" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/images/geek-girl-tees-logo-fb.png">
+    <meta property="og:url" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/featured/">
+    <meta property="og:image" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/images/jkir_portal_layer_tank_dd.jpg">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@katiemaefritz">
     <meta name="twitter:title" content="Portal Layer Tank: Geek Girl Tees, LLC">
     <meta name="twitter:description" content="Portal-themed women's tank top with Aperture logo. From Geek Girl Tees, LLC: outfitting nerdy lady-types since 2017.">
-    <meta name="twitter:image" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/images/geek-girl-tees-logo.png">
+    <meta name="twitter:image" content="https://katie-kapv98gmwdanx_f2dok.surge.sh/images/jkir_portal_layer_tank_dd.jpg">
     <!-- Geo Information -->
     <meta name="geo.region" content="US-MI">
     <meta name="geo.placename" content="Lansing">
@@ -72,7 +72,7 @@
               <h2>DRESSED FOR SCIENCING</h2>
               <p>To aid in the advancement of important scientific research, Aperture Science needs testers. And testers need proper clothing. At least, that's what it says in this file about human needs. We wouldn't really know. Oh, there's an entire section here about food, water, and not being hit by deadly lasers. Well, that would have been good to know before the tests were created. Oh well. We should still use these tests as a control study. For science.</p>
               <p>Double-layered 96% cotton / 4% spandex tank (blue on the bottom, white crop tank on the top) just like Chell's infamous top from the Portal series - Aperture Laboratories logo and all. Perfect for completing your Chell cosplay, or any testing you may encounter. Machine wash cold, inside out, gentle cycle. Tumble dry low. Imported.</p>
-              <footer><hr class="text-muted"><p class="text-muted">This tank top, its photo, and the description above all come from Think Geek. You can buy the shirt <a href="http://www.thinkgeek.com/product/jkir/">on their website.</a></p></footer>
+              <footer><hr class="text-muted"><p class="text-muted">This tank top, its photo, and the description above all come from Think Geek. You can buy the shirt <a href="http://www.thinkgeek.com/product/jkir/" target="_blank">on their website.</a></p></footer>
             </section>
             <form class="col-sm-2">
               <div class="form-group">
